{
    "name": "Player",
    "maps": [
        {
            "name": "Pouce",
            "id": "2b0e3068-1f9a-45fa-8e6c-cf40d5e8d3c0",
            "actions": [
                {
                    "name": "JoystickLeft",
                    "type": "Value",
                    "id": "d17bd2f9-2d59-4d4a-ab0b-2b20addbfbf8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DPadRight",
                    "type": "Button",
                    "id": "6a712d09-367c-4de0-8b1e-0533cd5492d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LT",
                    "type": "Button",
                    "id": "432f2e01-90f4-4ef6-9066-619546beebb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JoystickRight",
                    "type": "Value",
                    "id": "28222d89-b068-48ea-9d71-ee8196bea117",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "37052625-cc78-4d88-b6df-0aacb61c7e43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RT",
                    "type": "Button",
                    "id": "aaea9fd5-5291-48a7-b6be-220691d37628",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "657fe7dd-ad59-42a3-984f-7afa61801a7e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPadRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4eabc74-fc22-4c1e-a029-52246e21f173",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "614e72e6-77b5-4372-a6c4-815a9f251593",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "285f8087-3250-41e2-8fbd-ea74b7c93228",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "599e11dd-42e8-4297-b2e8-2f20a03e4610",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a54fa36d-727d-40e9-9a9d-5e88a804c0d2",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}